[metadata]
name = htmltools
version = attr: htmltools.__version__
author = Carson Sievert
author_email = carson@rstudio.com
url = https://github.com/rstudio/py-htmltools
description = Tools for HTML generation and output.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = html
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Bug Tracker = https://github.com/rstudio/py-htmltools/issues
    Source Code = https://github.com/rstudio/py-htmltools

[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    typing-extensions>=3.10.0.0
    packaging>=20.9
tests_require =
  pytest>=3
zip_safe = False

[options.packages.find]
include = htmltools

[options.package_data]
htmltools = py.typed


[flake8]
ignore = E203, E302, E402, E501, F403, F405, W503
